force-app/main/default/objects/Custom_Email_Template__c/Custom_Email_Template__c.object-meta.xml
<CustomObject>
    <label>Custom Email Template</label>
    <nameField>
        <label>Custom Email Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Email Templates</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>