force-app/main/default/objects/Custom_Email_Template__c/fields/Default_Boolean_Format__c.field-meta.xml
<CustomField>
    <fullName>Default_Boolean_Format__c</fullName>
    <label>Default Boolean Format</label>
    <length>40</length>
    <type>Text</type>
</CustomField>