force-app/main/default/objects/Custom_Email_Template__c/fields/Default_Currency_Format__c.field-meta.xml
<CustomField>
    <fullName>Default_Currency_Format__c</fullName>
    <label>Default Currency Format</label>
    <length>50</length>
    <type>Text</type>
</CustomField>