force-app/main/default/objects/Custom_Email_Template__c/fields/Default_Field_Value_3__c.field-meta.xml
<CustomField>
    <fullName>Default_Field_Value_3__c</fullName>
    <label>Default Field Value 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>