force-app/main/default/objects/Custom_Email_Template__c/fields/Document_Checklist_Category__c.field-meta.xml
<CustomField>
    <fullName>Document_Checklist_Category__c</fullName>
    <label>Document Checklist Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assets</fullName>
            </value>
            <value>
                <fullName>Benefits</fullName>
            </value>
            <value>
                <fullName>Caregiver Information</fullName>
            </value>
            <value>
                <fullName>Care Management</fullName>
            </value>
            <value>
                <fullName>Checks</fullName>
            </value>
            <value>
                <fullName>Contact Information</fullName>
            </value>
            <value>
                <fullName>Correspondence</fullName>
            </value>
            <value>
                <fullName>Court Documents</fullName>
            </value>
            <value>
                <fullName>Death-related Documents</fullName>
            </value>
            <value>
                <fullName>Disbursements</fullName>
            </value>
            <value>
                <fullName>End of Life Documents</fullName>
            </value>
            <value>
                <fullName>Miscellaneous/Other</fullName>
            </value>
            <value>
                <fullName>Miscellaneous Client Documents</fullName>
            </value>
            <value>
                <fullName>Personal/photos</fullName>
            </value>
            <value>
                <fullName>Public Benefit Correspondance</fullName>
            </value>
            <value>
                <fullName>Receipts</fullName>
            </value>
            <value>
                <fullName>Tax Documents</fullName>
            </value>
            <value>
                <fullName>Trust Documents</fullName>
            </value>
            <value>
                <fullName>Accounting/Statements</fullName>
                <isActive>false</isActive>
                <label>Accounting/Statements</label>
            </value>
            <value>
                <fullName>Assessment and Plan</fullName>
                <isActive>false</isActive>
                <label>Assessment and Plan</label>
            </value>
            <value>
                <fullName>Identification</fullName>
                <isActive>false</isActive>
                <label>Identification</label>
            </value>
            <value>
                <fullName>Leases</fullName>
                <isActive>false</isActive>
                <label>Leases</label>
            </value>
            <value>
                <fullName>Representative Payee</fullName>
                <isActive>false</isActive>
                <label>Representative Payee</label>
            </value>
            <value>
                <fullName>SNRs</fullName>
                <isActive>false</isActive>
                <label>SNRs</label>
            </value>
            <value>
                <fullName>Supplemental Needs-Distribution</fullName>
                <isActive>false</isActive>
                <label>Supplemental Needs-Distribution</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>