force-app/main/default/objects/Custom_Email_Template__c/fields/Document_Checklist_Category_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Checklist_Category_Type__c</fullName>
    <label>Document Checklist Category Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1099</fullName>
            </value>
            <value>
                <fullName>Annual Accounting</fullName>
            </value>
            <value>
                <fullName>Bene DRF Request</fullName>
            </value>
            <value>
                <fullName>Beneficiary Contact</fullName>
            </value>
            <value>
                <fullName>Change of PR</fullName>
            </value>
            <value>
                <fullName>CM Reports</fullName>
            </value>
            <value>
                <fullName>Correspondence</fullName>
            </value>
            <value>
                <fullName>Court Order</fullName>
            </value>
            <value>
                <fullName>Death Certificate</fullName>
            </value>
            <value>
                <fullName>Disbursements (on the D. Ober TL card)</fullName>
            </value>
            <value>
                <fullName>Grantor Letter</fullName>
            </value>
            <value>
                <fullName>House Deed</fullName>
            </value>
            <value>
                <fullName>Important information/documents</fullName>
            </value>
            <value>
                <fullName>Incoming</fullName>
            </value>
            <value>
                <fullName>Joinder Agreement</fullName>
            </value>
            <value>
                <fullName>Letter of Guardianship</fullName>
            </value>
            <value>
                <fullName>Lost Receipt Form</fullName>
            </value>
            <value>
                <fullName>Outgoing</fullName>
            </value>
            <value>
                <fullName>POA</fullName>
            </value>
            <value>
                <fullName>PR Contact</fullName>
            </value>
            <value>
                <fullName>Prepaid Funeral</fullName>
            </value>
            <value>
                <fullName>TMHP Death Verification</fullName>
            </value>
            <value>
                <fullName>Vehicle Title</fullName>
            </value>
            <value>
                <fullName>Other Contact</fullName>
                <isActive>false</isActive>
                <label>Other Contact</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>