force-app/main/default/objects/Custom_Email_Template__c/fields/Final_Body__c.field-meta.xml
<CustomField>
    <fullName>Final_Body__c</fullName>
    <label>Final Body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>