force-app/main/default/objects/Custom_Email_Template__c/fields/Organization_Wide_Email__c.field-meta.xml
<CustomField>
    <fullName>Organization_Wide_Email__c</fullName>
    <label>Organization Wide Email</label>
    <type>Email</type>
</CustomField>