force-app/main/default/objects/Custom_Email_Template__c/fields/Parent_Object__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object__c</fullName>
    <label>Parent Object</label>
    <length>50</length>
    <type>Text</type>
</CustomField>