force-app/main/default/objects/Custom_Email_Template__c/fields/Pdf_Template__c.field-meta.xml
<CustomField>
    <fullName>Pdf_Template__c</fullName>
    <label>Pdf Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>