force-app/main/default/objects/Custom_Email_Template__c/fields/Recipient_Address_Field__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Address_Field__c</fullName>
    <label>Recipient Address Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>