force-app/main/default/objects/Custom_Email_Template__c/fields/Send_Attachment__c.field-meta.xml
<CustomField>
    <fullName>Send_Attachment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Merged Attachment</label>
    <type>Checkbox</type>
</CustomField>