force-app/main/default/objects/Custom_Email_Template__c/listViews/Account_Templates.listView-meta.xml
<ListView>
    <fullName>Account_Templates</fullName>
    <columns>NAME</columns>
    <columns>Parent_Object__c</columns>
    <columns>Subject__c</columns>
    <columns>Folder__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Parent_Object__c</field>
        <operation>equals</operation>
        <value>Account</value>
    </filters>
    <label>Account Templates</label>
</ListView>