force-app/main/default/objects/Custom_Email_Template__c/listViews/Intake_Templates.listView-meta.xml
<ListView>
    <fullName>Intake_Templates</fullName>
    <columns>NAME</columns>
    <columns>Parent_Object__c</columns>
    <columns>Subject__c</columns>
    <columns>Folder__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Parent_Object__c</field>
        <operation>equals</operation>
        <value>Intake__c</value>
    </filters>
    <label>Intake Templates</label>
</ListView>