force-app/main/default/objects/Custom_Email_Template__c/listViews/No_Parent_Object.listView-meta.xml
<ListView>
    <fullName>No_Parent_Object</fullName>
    <columns>NAME</columns>
    <columns>Parent_Object__c</columns>
    <columns>Subject__c</columns>
    <columns>Folder__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Parent_Object__c</field>
        <operation>equals</operation>
    </filters>
    <label>No Parent Object</label>
</ListView>